revise swagger docs
