# docs/swagger.yaml
@@ -1,4 +1,21 @@
 definitions:
+  dto.FindUserResponseDto:
+    properties:
+      data: {}
+      meta:
+        $ref: '#/definitions/utils.PaginationMetaDto'
+    type: object
+  dto.LoginRequestDto:
+    properties:
+      email:
+        maxLength: 60
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   dto.LoginResponseDto:
     properties:
       tokens:
@@ -9,6 +26,13 @@ definitions:
     - tokens
     - user_id
     type: object
+  dto.RefreshTokenDto:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
   dto.RefreshTokenResponseDto:
     properties:
       access_token:
@@ -18,6 +42,30 @@ definitions:
     required:
     - access_token
     - refresh_token
+    type: object
+  dto.RegisterRequestDto:
+    properties:
+      avatar:
+        type: string
+      email:
+        maxLength: 60
+        type: string
+      first_name:
+        maxLength: 30
+        type: string
+      last_name:
+        maxLength: 30
+        type: string
+      password:
+        type: string
+      role:
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - password
+    - role
     type: object
   dto.RegisterResponseDto:
     properties:
@@ -45,13 +93,22 @@ definitions:
       user_id:
         type: string
     type: object
+  utils.PaginationMetaDto:
+    properties:
+      limit:
+        type: integer
+      offset:
+        type: integer
+      page:
+        type: integer
+    type: object
 info:
   contact:
     email: djourdan555@gmail.com
     name: Dustin Jourdan
     url: https://github.com/dinorain
 paths:
-  /admin/user:
+  /user:
     get:
       consumes:
       - application/json
@@ -71,7 +128,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.LoginResponseDto'
+            $ref: '#/definitions/dto.FindUserResponseDto'
+      security:
+      - ApiKeyAuth: []
       summary: Find all users
       tags:
       - Users
@@ -80,36 +139,12 @@ paths:
       - application/json
       description: To create user, admin only
       parameters:
-      - description: Email
-        in: path
-        name: email
+      - description: Payload
+        in: body
+        name: payload
         required: true
-        type: string
-      - description: First name
-        in: path
-        name: first_name
-        required: true
-        type: string
-      - description: Last name
-        in: path
-        name: last_name
-        required: true
-        type: string
-      - description: Password
-        in: path
-        name: password
-        required: true
-        type: string
-      - description: Role (admin or user)
-        in: path
-        name: role
-        required: true
-        type: string
-      - description: Avatar
-        in: path
-        name: avatar
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/dto.RegisterRequestDto'
       produces:
       - application/json
       responses:
@@ -117,6 +152,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.RegisterResponseDto'
+      security:
+      - ApiKeyAuth: []
       summary: To register user
       tags:
       - Users
@@ -136,6 +173,8 @@ paths:
       responses:
         "200":
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: Delete user
       tags:
       - Users
@@ -150,6 +189,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.UserResponseDto'
+      security:
+      - ApiKeyAuth: []
       summary: Find user
       tags:
       - Users
@@ -170,6 +211,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.UserResponseDto'
+      security:
+      - ApiKeyAuth: []
       summary: Update user
       tags:
       - Users
@@ -179,16 +222,12 @@ paths:
       - application/json
       description: User login with email and password
       parameters:
-      - description: Email
-        in: path
-        name: email
+      - description: Payload
+        in: body
+        name: payload
         required: true
-        type: string
-      - description: Password
-        in: path
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/dto.LoginRequestDto'
       produces:
       - application/json
       responses:
@@ -209,6 +248,8 @@ paths:
       responses:
         "200":
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: User logout
       tags:
       - Users
@@ -224,6 +265,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.UserResponseDto'
+      security:
+      - ApiKeyAuth: []
       summary: Find me
       tags:
       - Users
@@ -233,11 +276,12 @@ paths:
       - application/json
       description: Refresh access token
       parameters:
-      - description: Refresh Token
-        in: path
-        name: refresh_token
+      - description: Payload
+        in: body
+        name: payload
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/dto.RefreshTokenDto'
       produces:
       - application/json
       responses:
@@ -248,4 +292,9 @@ paths:
       summary: Refresh access token
       tags:
       - Users
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
