# internal/user/delivery/http/dto/find_user.go
@@ -1,0 +1,8 @@
+package dto
+
+import "github.com/dinorain/useraja/pkg/utils"
+
+type FindUserResponseDto struct {
+	Meta utils.PaginationMetaDto `json:"meta"`
+	Data interface{}              `json:"data"`
+}
