# pkg/utils/dto.go
@@ -1,0 +1,7 @@
+package utils
+
+type PaginationMetaDto struct {
+	Limit  int `json:"limit"`
+	Offset int `json:"offset"`
+	Page   int `json:"page"`
+}
